--- a/XAMLViews/MainMenuGame.xaml
+++ b/XAMLViews/MainMenuGame.xaml
@@ -72,7 +72,7 @@
                         </Rectangle.RenderTransform>
                     </Rectangle>
                     <Label Content="{x:Static p:Resources.FriendsList_Label}" 
-HorizontalAlignment="Left" 
+                       HorizontalAlignment="Left" 
                        Margin="113,224,0,0" 
                        VerticalAlignment="Top" 
                        Foreground="#FFFCFCFC" 
@@ -127,14 +127,15 @@ HorizontalAlignment="Left"
                         </Image.RenderTransform>
                     </Image>
                     <Label HorizontalAlignment="Left" 
-                       Margin="1166,194,0,0" 
+                       Content="{x:Static p:Resources.Settings_Label}"
+                       Margin="1141,189,0,0" 
                        VerticalAlignment="Top" 
                        Foreground="#FFFCFCFC" 
                        FontSize="39" 
                        FontWeight="Bold" 
                        FontFamily="Harlow Solid Italic" 
-                       Height="74" 
-                       Width="289" 
+                       Height="59" 
+                       Width="314" 
                        HorizontalContentAlignment="Center" 
                        VerticalContentAlignment="Center">
                         <Label.RenderTransform>
@@ -145,7 +146,6 @@ HorizontalAlignment="Left"
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Label.RenderTransform>
-                        <TextBlock Text="{x:Static p:Resources.Settings_Label}" Height="93" Width="256" />
                     </Label>
                 </Grid>
             </Border>
